# pychat

./: .flake8  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 43254772c037_users_table.py  ed2d6d932904_messages_table.py
pychat/: api_system.py  main.py  models.py
try_fastapi/: main.py
