[tool.poetry]
name = "try-fastapi"
version = "0.1.0"
description = ""
authors = ["Thiago Veronezi <tveronezi@gmail.com>"]
readme = "README.md"
packages = [{include = "try_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.114.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "try_fastapi.main:start"
